--- a/realestate.html
+++ b/realestate.html
@@ -306,7 +306,8 @@
                     После показа квартиры запишите ее номер. <br>
                     Вводите по порядку или вставьте полный адрес от города до квартиры.
                 </h2>
-                <p class="apart__text" id="apart_bottom" >Например: Москва, <i class="nwrp">Проспект Мира 189, кв 10</i> </p>
+                <p class="apart__text" id="apart_bottom">Например: Москва, <i class="nwrp">Проспект Мира 189, кв 10</i>
+                </p>
                 <div class="apart-form fx">
                     <input type="text" class="form-input"
                         placeholder="Начните вводить адрес с города или вставьте кадастровый номер">
@@ -470,7 +471,7 @@
                         Свяжитесь с нами с помощью этой формы обратной связи:
                     </div>
 
-                    <form class="wide-form fx">
+                    <form class="wide-form fx form-validate">
                         <div class="form-box">
                             <input required type="text" class="form-input" name="name" placeholder="Имя">
                             <span class="form-error nameError">Не более 15 символов</span>
@@ -552,7 +553,7 @@
                     </div>
                     <div class="exmp-slider slick-dots-gray">
                         <div class="exmp-slide">
-                            <img src="img/real-estate/exmp-1.jpg" alt="ex" loading="lazy" class="exmp__img">
+                            <img src="img/real-estate/exmp-1.jpg" alt="ex" class="exmp__img">
                             <div class="exmp-content">
                                 <div class="bgr exmp-top">
                                     <h4 class="exmp__heading">Отчет об объекте недвижимости о кадастровой стоимости</h4>
@@ -574,7 +575,7 @@
                             </div>
                         </div>
                         <div class="exmp-slide">
-                            <img src="img/real-estate/exmp-2.jpg" alt="ex" loading="lazy" class="exmp__img">
+                            <img src="img/real-estate/exmp-2.jpg" alt="ex" class="exmp__img">
                             <div class="exmp-content">
                                 <div class="bgr exmp-top">
                                     <h4 class="exmp__heading">Отчет об объекте недвижимости на земельный участок</h4>
@@ -600,7 +601,7 @@
                             </div>
                         </div>
                         <div class="exmp-slide">
-                            <img src="img/real-estate/exmp-3.jpg" alt="ex" loading="lazy" class="exmp__img">
+                            <img src="img/real-estate/exmp-3.jpg" alt="ex" class="exmp__img">
                             <div class="exmp-content">
                                 <div class="bgr exmp-top">
                                     <h4 class="exmp__heading">Отчет об объекте недвижимости о переходе прав</h4>
@@ -623,7 +624,7 @@
                             </div>
                         </div>
                         <div class="exmp-slide">
-                            <img src="img/real-estate/exmp-1.jpg" alt="ex" loading="lazy" class="exmp__img">
+                            <img src="img/real-estate/exmp-1.jpg" alt="ex" class="exmp__img">
                             <div class="exmp-content">
                                 <div class="bgr exmp-top">
                                     <h4 class="exmp__heading">Отчет об объекте недвижимости о кадастровой стоимости</h4>
@@ -991,7 +992,7 @@
                     Закажите услугу проверки юридической чистоты сделки. <br>
                     Оставьте заявку и мы перезвоним!
                 </p>
-                <form class="ques-form fx">
+                <form class="ques-form fx form-validate">
                     <div class="form-box">
                         <input required type="text" class="form-input" name="name" placeholder="Имя">
                         <span class="form-error nameError">Не более 15 символов</span>
@@ -1001,7 +1002,8 @@
                         <span class="form-error emailError">Некорректный e-mail</span>
                     </div>
                     <div class="form-box --last">
-                        <textarea required type="text" class="form-input" name="comment" placeholder="Комментарий"></textarea>
+                        <textarea required type="text" class="form-input" name="comment"
+                            placeholder="Комментарий"></textarea>
                         <span class="form-error commentError">Не более 150 символов</span>
                     </div>
                     <button type="submit" class="btn">Отправить</button>
